New molang compiler